--- a/date/2024-09/index.htm
+++ b/date/2024-09/index.htm
@@ -2,8 +2,10 @@
 <html lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="https://v2ray-node.github.io/free-nodes/page-3.htm" />
-    <title>免费节点 - V2ray Node免费节点官网 - 第2页</title>
+        <link rel="canonical" href="https://v2ray-node.github.io" />
+    <title>2024-09归档 - V2ray Node免费节点官网</title>
+        <meta name="keywords" content="2024-09归档" />
+        <meta name="description" content="2024-09归档" />
         <link rel="icon" href="__ADDON__/img/v2ray_node/favicon.ico" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -67,8 +69,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mt-lg-5 mr-auto text-left align-self-end align-self-md-center">
-                        <h1>免费节点</h1>
-                        <p><a href="/">首页</a> <span class="mx-3">&bullet;</span> 免费节点</p>
+                        <h1>2024-09 归档</h1>
+                        <p><a href="/">首页</a> <span class="mx-3">&bullet;</span> 2024-09 归档</p>
                     </div>
                 </div>
             </div>
@@ -78,47 +80,21 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
-                                                        <div class="row item xcblog-blog-item" data-date="2024-08-12">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-09-01">
                                 <div class="col-md-3">
-                                    <a href="/free-nodes/2024-8-12-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    <a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
                                     </a>
                                 </div>
                                 <div class="col-md-9">
-                                    <a href="/free-nodes/2024-8-12-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    <a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</h3>
                                     </a>
-                                    <p>这一次的节点更新覆盖了香港、新加坡、美国、日本、加拿大、韩国、欧洲等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-08-11">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、欧洲、美国、韩国、日本、新加坡、香港等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-08-10">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-8-10-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/291f39868df7237a0f3ec70e78e9a24b.webp" alt="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-8-10-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了欧洲、美国、日本、加拿大、新加坡、韩国、香港等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p>这一次的节点更新覆盖了加拿大、欧洲、香港、美国、韩国、新加坡、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
                             
-                            <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                        </div>
+                                                    </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -127,16 +103,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-high-speed-nodes.htm" title="「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share.htm" title="「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-27-free-node-subscribe.htm" title="「8月27日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月27日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-26-free-v2ray.htm" title="「8月26日」最高速度19.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月26日」最高速度19.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-15-free-node-subscribe.htm" title="「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-22-free-v2ray.htm" title="「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-free-v2ray-subscribe.htm" title="「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-12-free-node-subscribe.htm" title="「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-29-free-node-subscribe-links.htm" title="「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-v2ray.htm" title="「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" title="「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-18-free-node-subscribe.htm" title="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-29-free-node-subscribe-links.htm" title="「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-23-node-share-links.htm" title="「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
