--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -78,6 +78,19 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-09-01">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、欧洲、香港、美国、韩国、新加坡、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-08-31">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-8-31-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -195,19 +208,6 @@
                                     <p>这一次的节点更新覆盖了香港、加拿大、美国、韩国、欧洲、日本、新加坡等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-08-22">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-8-22-free-v2ray.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/37002d76718f469b4a4e2c3ae6e5a20a.webp" alt="「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-8-22-free-v2ray.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了新加坡、香港、韩国、加拿大、欧洲、日本、美国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -218,16 +218,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share.htm" title="「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-free-v2ray-subscribe.htm" title="「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-node-subscribe.htm" title="「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-v2ray.htm" title="「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-12-free-node-subscribe.htm" title="「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-14-free-high-speed-nodes.htm" title="「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-high-speed-nodes.htm" title="「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-23-node-share-links.htm" title="「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-26-free-v2ray.htm" title="「8月26日」最高速度19.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月26日」最高速度19.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-v2ray.htm" title="「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" title="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-19-free-node-subscribe-links.htm" title="「8月19日」最高速度22.1M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「8月19日」最高速度22.1M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-18-free-node-subscribe.htm" title="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-20-free-high-speed-nodes.htm" title="「8月20日」最高速度18.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月20日」最高速度18.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-29-free-node-subscribe-links.htm" title="「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share.htm" title="「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -238,6 +238,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">22</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
             </li>
